--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
 
-
+.form-nim {
+    background-color: #e9e9e9e9;
 }
